rectified collapsed chart issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -349,8 +349,14 @@ p.currency {
 .balance-container .message-container {
 padding: 16px;
 margin: 20px 0;
+font-size: 0.9rem;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.balance-container p.text{
+  font-size: 0.9rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
 .balance-container .static-buttons {
   display: flex;
@@ -567,7 +573,8 @@ background-color: #3a3838;
 }
 
 .line-chart-container{
-  width: 80%;
+  width: 100%;
+  height: auto;
   margin: 20px auto;
 }
 
@@ -651,16 +658,19 @@ margin: 0px
 }
 
 .info-container .right-container {
-  width: 60%;
+  width: 50%;
 font-size: 0.9rem;
 font-family: "Arial, Helvetica, sans-serif";
 line-height: 170%;
-  
+padding: 0 16px;
 }
 
 .info-container .left-container, .info-container .middle-container{
   font-size: 0.9rem;
 font-family:"Arial, Helvetica, sans-serif";
+width: 25%;
+padding: 0 16px;
+
 
 }
 
@@ -829,10 +839,7 @@ justify-content: space-between;
     margin: 0 20px 0 20px;
   }
 
-  .balance-container .text {
-    font-size: 1rem;
-  }
-
+  
   .select-crypto button {
     width: 100%;
   }
@@ -863,9 +870,13 @@ justify-content: space-between;
     font-size: 0.8rem;
   }
   
+  .complete-account .user-icon {
+    font-size: 2rem;
+  
+  }
 
   .complete-account img {
-    width: 40%;
+    width: 30%;
     height: auto;
   }
 
@@ -880,6 +891,11 @@ justify-content: space-between;
     
   }
 
+  .balance-container .message-container, .balance-container p.text {
+    font-size: 0.7rem;
+    }
+    
+  
 
   
 .balance-container .static-buttons {
@@ -921,7 +937,7 @@ justify-content: space-between;
   }
 
   .markets-container .arrow-up, .markets-container .arrow-down{
-    margin: 0 4px;
+    margin: 0 3px;
 
   }
 
@@ -972,12 +988,18 @@ justify-content: space-between;
 
 }
 
+.chart-outside-cover .line-chart-container {
+  position: "relative";
+   width: "100%";
+    height: "500px"; 
+}
+
 
 .info-cover .info-container {
 height: 400px;
 font-size: 0.8rem;
 flex-direction: column;
-overflow-y: scroll;
+overflow: scroll;
 scrollbar-width: thin;
 }
 
@@ -989,15 +1011,21 @@ line-height: 170%;
 padding: 10px;
 }
 
+.info-container .left-container, .info-container .middle-container{
+  font-size: 0.9rem;
+font-family:"Arial, Helvetica, sans-serif";
+width: 100%;
+
+}
 
 
 .left-container .tooltip{
-  padding: 16px;
   font: 0.7rem arial;
   position: absolute;
-  bottom: 70%;
+  bottom: 0;
   left: 10%;
-  width:auto;
+  width: 100%;
+  height: auto;
   display:none; 
   z-index: 1;
 }
